--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,3 +14,9 @@
  <p>
     Bạn vừa nhập username : {{username}}
  </p>
+<div>
+    <button (click)="animate()">Click Me</button>
+    <div [@myanimation] = "state" class="rotate">
+       <img style="width: 340px; height: 82px" src="https://freetuts.net/public/logo/hoc-lap-trinh-online.png" width="100" height="100">
+    </div>
+ </div>
